[package]
name = "faceid"
version = "0.1.0"
edition = "2021"


[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "File", "FileList", "FileReader", "HtmlElement", "Event", "DragEvent", "DataTransfer", "Window", "Document", "MouseEvent",
] }
[lib]
crate-type = ["cdylib", "rlib"]